--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3,6 +3,7 @@ body {
   margin: 32px;
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
+  border: 1px solid #ccc;  
 }
 
 section {
