Added: shopping list

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,23 +1,57 @@
+$mainColor: #1351af;
+$width: 60%;
+
 body {
-  padding: 32px;
-  margin: 32px;
+  padding: 0;
+  margin: 0;
   font-family: "Roboto", Arial, sans-serif;
-  font-size: 16px;
-  border: 1px solid #ccc;  
+  font-size: 16px;  
+}
+
+header {
+  background-color: $mainColor;
+  padding: 16px 0;
+}
+
+header .brand {
+  width: $width;
+  margin: auto;
+  color: wheat;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.main {
+  width: $width;
+  margin: 32px auto;
+  padding: 16px;
+  border: 1px solid #ddd;
+  background-color: #eee;
 }
 
 section {
   padding: 16px;
-  margin-bottom: 32px;
   border: 1px solid #ccc;
   background-color: #eee;
+}
 
-  h2 {
-    margin: 0;
-  }
+.input {
+  margin-bottom: 8px;
+  display: inline-block;
+}
 
-  input {
-    margin-bottom: 10px;
-    margin-top: 10px;
+.input input,
+.input label {
+  font-size: inherit;
+  display: inline-block;
+}
+
+button {
+  font-style: inherit;
+  background-color: white;
+  border: 1px solid #ccc;
+
+  .danger {
+    background-color: red;
   }
 }
